--- a/index.html
+++ b/index.html
@@ -41,6 +41,96 @@
                 </tr>
             </thead>
         </table>
+        <h2>Laboratorio 1: Preguntas a responder</h2>
+
+        <h3>Diferencia entre Internet y la World Wide Web</h3>
+        <p>El internet es la red global de computadoras interconectadas que permite el
+            intercambio de datos y comunicacion a traves de diversos protocolos. <br>
+            La World Wide Web es un sistema de información que utiliza Internet para
+            acceder y compartir documentos y recursos a través de navegadores web,
+            utilizando el protocolo HTTP. <br>
+            Podriamos decir que la diferencia entre estos conceptos es parecida a la
+            diferencia entre una carretera y los autos que la recorren. Siendo internet
+            la carretera y WWW el conjunto de páginas y servicios que viajan sobre esa carretera</p>
+
+        <h3>Cuales son las partes de un URL?</h3>
+        <ol>
+            <li>Esquema: Indica el protocolo (ej. http, https).</li>
+            <li>Dominio: Nombre del sitio o dirección IP (ej. www.example.com).</li>
+            <li>Puerto (opcional): Especifica el puerto del servidor (ej. :80).</li>
+            <li>Ruta: La dirección del recurso en el servidor (ej. /path/to/page).</li>
+            <li>Consulta (opcional): Parámetros enviados al servidor (ej. ?id=123).</li>
+            <li>Fragmento (opcional): Navegación dentro de la página (ej. #section1).</li>
+        </ol>
+
+        <h3>Cuál es el propósito de los métodos HTTP: GET, HEAD, POST, PUT, PATCH, DELETE?</h3>
+        <ol>
+            <li>GET: Solicita un recurso sin modificarlo.</li>
+            <li>HEAD: Similar a GET, pero solo obtiene los encabezados de la respuesta.</li>
+            <li>POST: Envía datos al servidor para crear un recurso.</li>
+            <li>PUT: Envía datos al servidor para actualizar o crear un recurso.</li>
+            <li>PATCH: Modifica parcialmente un recurso existente.</li>
+            <li>DELETE: Elimina un recurso en el servidor.</li>
+        </ol>
+
+        <h3>¿Qué método HTTP se debe utilizar al enviar un formulario HTML, por ejemplo cuando ingresas tu usuario y
+            contraseña en algún sitio? ¿Por qué?</h3>
+        <p>POST: Se usa porque envía los datos de manera segura y permite enviar datos de gran tamaño, además de no
+            mostrar los datos en la URL.</p>
+
+        <h3>¿Qué método HTTP se utiliza cuando a través de un navegador web se accede a una página a través de un URL?
+        </h3>
+        <p>GET: Se utiliza para solicitar y obtener el contenido de la página.</p>
+
+        <h3>Un servidor web devuelve una respuesta HTTP con código 200. ¿Qué significa esto? ¿Ocurrió algún error?</h3>
+        <p>Significa que la solicitud fue exitosa y el servidor devolvió el recurso solicitado. No ocurrió ningún error.
+        </p>
+
+        <h3>¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder al
+            sitio y se encontró con un error 404? ¿Por qué?</h3>
+        <p>Depende, el error 404 indica que el recurso solicitado no fue encontrado. Si el recurso debería existir, es
+            responsabilidad del desarrollador corregirlo.
+            Si no, puede ser que el usuario haya introducido una URL incorrecta</p>
+
+        <h3>¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder al
+            sitio y se encontró con un error 500? ¿Por qué?</h3>
+        <p>Sí, el error 500 indica un problema interno del servidor, lo que sugiere un problema en el código o en la
+            configuración del servidor que el desarrollador
+            debe solucionar</p>
+
+        <h3>¿Qué significa que un atributo HTML5 esté depreciado o desaprobado (deprecated)? Menciona algunos elementos
+            de HTML 4 que en HTML5 estén desaprobados.</h3>
+        <p> Significa que el atributo o elemento ya no es recomendado para uso futuro y podría ser eliminado en
+            versiones posteriores. <br>
+            Ejemplos: Elementos como <font>, <center>, y atributos como bgcolor en HTML 4 están desaprobados en HTML5.
+        </p>
+
+        <h3>¿Cuáles son las diferencias principales entre HTML 4 y HTML5?</h3>
+        <p>HTML5 introduce nuevas etiquetas (
+        <article>, <section>, <nav>, etc.), mejor soporte multimedia (<audio>, <video>), APIs avanzadas, y mayor
+                            compatibilidad
+                            con dispositivos móviles. Además, elimina varios elementos y atributos obsoletos de HTML 4.
+                            </p>
+
+                            <h3>¿Qué componentes de estructura y estilo tiene una tabla?</h3>
+                            <ol>
+                                <li>Estructura: <table>, <thead>,
+                                        <tbody>,
+                                        <tfoot>, <tr>, <th>,
+                                                <td>.</li>
+                                <li>Estilo: Puede incluir bordes, relleno (padding), alineación de texto, y color de
+                                    fondo.</li>
+                            </ol>
+
+                            <h3>¿Cuáles son los principales controles de una forma HTML5?</h3>
+                            <p><input>, <select>, <textarea>, <button>, <label>, y elementos de entrada específicos como <input type="email">, <input type="date">, <input type="number">, entre otros.</p>
+
+        <h3>¿Cuál es el ciclo de vida de los sistemas de información?</h3>
+        <p>Planificación, análisis, diseño, implementación, pruebas, despliegue, y mantenimiento.</p>
+
+        <h3>¿Cuál es el ciclo de desarrollo de sistemas de información?</h3>
+        <p>Implica los pasos específicos tomados para desarrollar el software, generalmente siguiendo metodologías como cascada, ágil o desarrollo iterativo. Incluye fases
+             como la definición de requisitos, diseño de sistemas, desarrollo, pruebas, y mantenimiento.</p>
     </main>
     <footer></footer>
 </body>
