agregar estilos en linea

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <title>Chilaquiles</title>
 </head>
+<style>
+    body {
+        color: darkslategrey;
+    }
+</style>
 
 <body>
     <header>
@@ -12,7 +17,7 @@
     <nav>
         <ul>
             <li>Chilaquiles verdes</li>
-            <li>Chilaquiles rojos</li>
+            <li>Chilaquiles <span style="color:red">rojos</span></li>
         </ul>
     </nav>
     <main>
