agregar hoja de estilo externa

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Chilaquiles</title>
+    <link rel="stylesheet" type="text/css" href="css/mis_estilos.css">
 </head>
 <style>
     body {
@@ -16,7 +17,7 @@
     </header>
     <nav>
         <ul>
-            <li>Chilaquiles verdes</li>
+            <li>Chilaquiles <span class="verde">verdes</span></li>
             <li>Chilaquiles <span style="color:red">rojos</span></li>
         </ul>
     </nav>
