aplicar selector de id

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1>Chilaquiles</h1>
+        <h1 id="titulo">Chilaquiles</h1>
     </header>
     <nav>
         <ul>
