declarar funciones js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Chilaquiles</title>
-    <link rel="stylesheet" type="text/css" href="css/mis_estilos.css">
+    <link rel="stylesheet" type="text/css" href="css/mis_estilos.min.css">
 </head>
 <style>
     body {
@@ -104,42 +104,9 @@
         <p>Sí, el error 500 indica un problema interno del servidor, lo que sugiere un problema en el código o en la
             configuración del servidor que el desarrollador
             debe solucionar</p>
-
-        <h3>¿Qué significa que un atributo HTML5 esté depreciado o desaprobado (deprecated)? Menciona algunos elementos
-            de HTML 4 que en HTML5 estén desaprobados.</h3>
-        <p> Significa que el atributo o elemento ya no es recomendado para uso futuro y podría ser eliminado en
-            versiones posteriores. <br>
-            Ejemplos: Elementos como <font>, <center>, y atributos como bgcolor en HTML 4 están desaprobados en HTML5.
-        </p>
-
-        <h3>¿Cuáles son las diferencias principales entre HTML 4 y HTML5?</h3>
-        <p>HTML5 introduce nuevas etiquetas (
-        <article>, <section>, <nav>, etc.), mejor soporte multimedia (<audio>, <video>), APIs avanzadas, y mayor
-                            compatibilidad
-                            con dispositivos móviles. Además, elimina varios elementos y atributos obsoletos de HTML 4.
-                            </p>
-
-                            <h3>¿Qué componentes de estructura y estilo tiene una tabla?</h3>
-                            <ol>
-                                <li>Estructura: <table>, <thead>,
-                                        <tbody>,
-                                        <tfoot>, <tr>, <th>,
-                                                <td>.</li>
-                                <li>Estilo: Puede incluir bordes, relleno (padding), alineación de texto, y color de
-                                    fondo.</li>
-                            </ol>
-
-                            <h3>¿Cuáles son los principales controles de una forma HTML5?</h3>
-                            <p><input>, <select>, <textarea>, <button>, <label>, y elementos de entrada específicos como <input type="email">, <input type="date">, <input type="number">, entre otros.</p>
-
-        <h3>¿Cuál es el ciclo de vida de los sistemas de información?</h3>
-        <p>Planificación, análisis, diseño, implementación, pruebas, despliegue, y mantenimiento.</p>
-
-        <h3>¿Cuál es el ciclo de desarrollo de sistemas de información?</h3>
-        <p>Implica los pasos específicos tomados para desarrollar el software, generalmente siguiendo metodologías como cascada, ágil o desarrollo iterativo. Incluye fases
-             como la definición de requisitos, diseño de sistemas, desarrollo, pruebas, y mantenimiento.</p>
     </main>
     <footer></footer>
+    <script src="js/introjs.js"></script>
 </body>
 
 </html>
